--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,157 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+body{
+  font: 18px;
+  background-color: #666;
+  color: #4d4d4d;
 }
+article{
+  width: 1000px;
+  margin: 50px auto 0;
+  background-color: #fff;
+  padding: 20px;
+}
+article>h3{
+  font-size: 33px;
+  margin-bottom: 25px;
+}
+#appoint{
+  box-sizing: border-box;
+  margin-bottom: 20px;
+  border: 2px solid #c3ffb1;
+  border-radius: 10px;
+}
+#appoint>h4{
+  display: flex;
+  align-items: center;
+  padding: 10px 20px;
+  border-radius: 10px 10px 0 0;
+  margin-bottom: 20px;
+  border: 2px solid #c3ffb1;
+  color: #2e6d19;
+  background-color: #c3ffb1;
+  cursor: pointer;
+}
+#appoint>ul{
+  padding: 0 20px;
+  margin-bottom: 20px;
+}
+#appoint>ul>li{
+  display: flex;
+  margin-bottom: 15px;
+  align-items: center;
+}
+#appoint>ul>li>label{
+  width: 15%;
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+}
+#appoint>ul>li>input,#appoint>ul>li>textarea{
+  width: 80%;
+  border: 1px solid #ccc;
+  padding: 10px;
+  background: 4px;
+  color: #4d4d4d;
+}
+#appoint>p{
+  padding: 0 20px;
+  margin-bottom: 20px;
+  text-align: left;
+}
+#appoint>p>input{
+  width: 788px;
+  margin-left: 15%;
+  border: none;
+  padding: 10px;
+  border-radius: 10px;
+  color: #2e6d19;
+  background-color: #c3ffb1;
+  cursor: pointer;
+}
+/* search */
+#search{
+  margin-bottom: 20px;
+  border: 2px solid #c3ffb1;
+  position: relative;
+}
+#search>p{
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 0 20px;
+  height: 38px;
+}
+#search>p>input{
+  border: none;
+  padding: 10px 0;
+  margin: 0;
+  width: 80%;
+  text-indent: 20px;
+}
+#search>p>button{
+  position: absolute;
+  right: 0; top: 0;
+  width: 15%;
+  border: none;
+  background-color: #c3ffb1;
+  color: #2e6d19;
+  height: 100%;
+}
+#search ul{
+  position: absolute;
+  right: 0; top: 38px;
+  z-index: 100;
+  width: 20%;
+  border: 2px solid #c3ffb1;
+  padding: 10px;
+  box-sizing: border-box;
+  background-color: #fff;
+}
+#search ul>li{
+  padding: 10px;
+  border-bottom: 1px solid #666;
+}
+#search ul>li:last-child{
+  border-bottom: none;
+}
+#list{
+  padding: 0 20px;
+}
+#list>ul>li{
+  border-bottom: 1px solid #ddd;
+  display: flex;
+  flex-direction: row-reverse;
+  justify-content: space-between;
+  padding: 20px 0;
+}
+#list>ul>li>dl{
+  width: 80%;
+  position: relative;
+}
+#list>ul>li>dl>dt{
+  font-size: 23px;
+  font-weight: bolder;
+  margin-bottom: 10px;
+  color: #2e6d19;
+}
+#list>ul>li>dl>dd:nth-child(2){
+  font-size: 20px;
+}
+#list>ul>li>dl>dd:nth-child(3){
+  font-size: 18px;
+}
+#list>ul>li>dl>dd:nth-child(4){
+  position: absolute;
+  right: 0; top: 0;
+}
+#list>ul>li>p{
+  width: 15%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+#list>ul>li>p>button{
+  width: 30px;
+  height: 30px;
+  background-color: rgb(190, 35, 35);
+  color: #fff;
+  border: none;
+  border-radius: 10px;
 }
